--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@cowprotocol/cow-sdk": "^6.1.1",
+    "@cowprotocol/cow-sdk": "^6.2.0-RC.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "zustand": "^5.0.7"
